@@ -1319,7 +1319,7 @@
             }
         },
         load: function(ids, set_cursor=true, modified=false, position=-1) {
-            this.group.load(ids, modified, position);
+            this.group.load(ids, modified, position, null);
             this.current_view.reset();
             this.current_record = null;
             return this.display(set_cursor);
@@ -1707,7 +1707,7 @@
             var records = this.current_view.selected_records;
             this.model.copy(records, this.context)
                 .then(new_ids => {
-                    this.group.load(new_ids, false, this.new_position);
+                    this.group.load(new_ids, false, this.new_position, null);
                     if (!jQuery.isEmptyObject(new_ids)) {
                         this.current_record = this.group.get(new_ids[0]);
                     }
