@@ -121,6 +121,7 @@ attlist.field &=
 attlist.field &= attribute symbol { text }?
 attlist.field &= [a:defaultValue = "1"] attribute grouping { "0" | "1" }?
 attlist.field &= [a:defaultValue = "square"] attribute border { "square" | "circle" | "rounded" }?
+attlist.field &= attribute loading { "lazy" | "eager" }?
 image = element image { attlist.image, empty }
 attlist.image &= attribute name { text }
 attlist.image &= [a:defaultValue = "icon"] attribute type { "icon" | "url" }?
