@@ -45,6 +45,23 @@ class ButtonActionException(RPCReturnException):
         return self.value
 
 
+def set_visible(node, fields, loading='eager'):
+    "Set loading to visible fields"
+    if node.tag == 'group':
+        if node.attrib.get('expandable', '1') == '1':
+            for child in node:
+                set_visible(child, fields, loading)
+    elif node.tag == 'notebook':
+        if len(node) > 0:
+            set_visible(node[0], fields, loading)
+    elif node.tag == 'field':
+        if node.attrib['name'] in fields:
+            node.attrib['loading'] = 'eager'
+    else:
+        for child in node:
+            set_visible(child, fields, loading)
+
+
 def on_change(func):
     @wraps(func)
     def wrapper(self, *args, **kwargs):
@@ -443,10 +460,13 @@ class ModelView(Model):
                         if colspan is not None:
                             element.attrib['colspan'] = colspan
 
-        # Remove empty pages
         if type == 'form':
             for page in tree.xpath('//page[not(descendant::*)]'):
                 page.getparent().remove(page)
+
+            set_visible(tree,
+                {fname for fname, field in cls._fields.items()
+                    if field._type in {'one2many', 'many2many'}})
 
         if type == 'tree':
             user = Transaction().user
